# RemnantMCP

./: .env.example  .gitignore  Implementation.md  LICENSE  Project_Vision.md  main.py  pyproject.toml  requirements.txt
migrations/: schema.sql
remnant/: structures.py
remnant/agent/: extractors.py  graph.py  mapper.py  resolver.py  router.py  validator.py
remnant/ingestion/: __init__.py  coordinator.py  git_parser.py  grouper.py  redactor.py
remnant/storage/: neo4j.py  postgres.py  qdrant.py  voyage.py  writer.py
tests/: test_agent.py  test_ingestion.py  test_integration.py  test_storage.py
