[project]
name = "remnantmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "gitpython>=3.1.51",
    "google-genai>=2.11.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "neo4j>=6.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.13.0",
    "voyageai>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
